# sda-automation-service

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: automation-service.mdc  coding-standards.mdc  python-patterns.mdc
api/bruno/: README.md  auth-simple-login.bru  extract-activities.bru  extract-combined.bru  extract-profile.bru  extract-specialties.bru  health-live.bru  health-ready.bru  session-create.bru  session-delete.bru  session-status.bru
api/bruno/environments/: Local.bru
src/automation_service/: __init__.py  main.py
src/automation_service/api/: routes.py
src/automation_service/core/: config.py  exceptions.py  logging.py
src/automation_service/models/: __init__.py  schemas.py
src/automation_service/services/: browser.py  club_virtual.py  login_flow.py  orchestrator.py
src/automation_service/services/extractors/: __init__.py  base.py  profile.py  tasks.py
tests/: __init__.py  conftest.py  test_health.py
