[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automation-service"
version = "0.1.0"
description = "SDA Automation Service - Web automation with Playwright"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SDA Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "playwright>=1.41.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]

[project.scripts]
automation-service = "automation_service.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/automation_service"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async (async/await best practices)
    "S",      # flake8-bandit (security)
    "C90",    # mccabe (complexity)
    "ANN",    # flake8-annotations (type hints)
    "BLE",    # flake8-blind-except (catch specific exceptions)
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "TRY",    # tryceratops (exception handling)
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # do not perform function calls in argument defaults (FastAPI uses this)
    "PLR0913",  # too many arguments
    "ANN101",   # missing type annotation for self
    "ANN102",   # missing type annotation for cls
    "ANN401",   # dynamically typed expressions (Any) are disallowed
    "S101",     # use of assert detected (pytest uses assert)
    "TRY003",   # avoid specifying long messages outside exception class
    "FBT001",   # boolean positional arg in function definition
    "FBT002",   # boolean default value in function definition
    "COM812",   # trailing comma missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "S101", "ANN", "BLE001"]
"src/automation_service/main.py" = ["T20"]  # allow print in main

[tool.ruff.lint.isort]
known-first-party = ["automation_service"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 6
max-statements = 60

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/automation_service --cov-report=term-missing"

[tool.coverage.run]
source = ["src/automation_service"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
